# atomr-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
ai-skills/: README.md  plugin.json
crates/agent/: Cargo.toml
crates/agent/src/: boxed.rs  inference.rs  lib.rs  middleware.rs  pipeline.rs  spec.rs  trait.rs
crates/avatar-core/: Cargo.toml
crates/avatar-core/src/: blendshape.rs  emotion.rs  error.rs  frame.rs  lib.rs  sink.rs  viseme.rs  wire.rs
crates/avatar-harness/: Cargo.toml
crates/avatar-harness/src/: builder.rs  cognition.rs  emotion.rs  harness.rs  lib.rs  perception.rs  sync_manager.rs  synthesis.rs
crates/avatar-harness/tests/: end_to_end.rs
crates/avatar-provider-audio2face/: Cargo.toml
crates/avatar-provider-audio2face/src/: lib.rs
crates/avatar-provider-livelink/: Cargo.toml
crates/avatar-provider-livelink/src/: config.rs  lib.rs  sink.rs
crates/cache/: Cargo.toml
crates/cache/src/: inmem.rs  lib.rs  redis.rs  semantic.rs  sqlite.rs
crates/callable/: Cargo.toml
crates/callable/src/: decorators.rs  lib.rs  pipeline.rs
crates/channel-core/: Cargo.toml  README.md
crates/channel-core/src/: content.rs  error.rs  events.rs  ids.rs  lib.rs  memory.rs  provider.rs  spec.rs  store.rs  target.rs  thread.rs
crates/channel-core/tests/: integration.rs
crates/channel-harness/: Cargo.toml  README.md
crates/channel-harness-web/: Cargo.toml  README.md
crates/channel-harness-web/src/: lib.rs  ws.rs
crates/channel-harness-web/src/routes/: channels.rs  mod.rs  threads.rs  webhook.rs
crates/channel-harness-web/tests/: api.rs
crates/channel-harness/src/: builder.rs  harness.rs  inbound.rs  lib.rs  outbound.rs
crates/channel-harness/tests/: orchestrator.rs
crates/channel-provider-discord/: Cargo.toml  README.md
crates/channel-provider-discord/src/: config.rs  gateway.rs  lib.rs  parse.rs  rest.rs  verify.rs
crates/channel-provider-discord/tests/: provider.rs
crates/channel-provider-signal/: Cargo.toml  README.md
crates/channel-provider-signal/src/: config.rs  lib.rs  listener.rs  rpc.rs
crates/channel-provider-whatsapp/: Cargo.toml  README.md
crates/channel-provider-whatsapp/src/: client.rs  config.rs  lib.rs  parse.rs  webhook.rs
crates/cli/: Cargo.toml
crates/cli/src/: inspector.rs  main.rs
crates/coding-cli-core/: Cargo.toml  README.md
crates/coding-cli-core/src/: error.rs  event.rs  lib.rs  projection.rs  request.rs  result.rs  vendor.rs
crates/coding-cli-harness/: Cargo.toml  README.md
crates/coding-cli-harness-web/: Cargo.toml  README.md
crates/coding-cli-harness-web/src/: error.rs  lib.rs  routes.rs  runner.rs  spa.rs  sse.rs  ws.rs
crates/coding-cli-harness-web/tests/: routes.rs
crates/coding-cli-harness-web/ui/: app.js  index.html  styles.css
crates/coding-cli-harness/src/: dispatch.rs  error.rs  harness.rs  headless.rs  interactive.rs  lib.rs  pty_pump.rs  registry.rs  session.rs  spec.rs  store.rs
crates/coding-cli-harness/tests/: headless.rs
crates/coding-cli-isolator/: Cargo.toml  README.md
crates/coding-cli-isolator/images/: antigravity.Dockerfile  claude.Dockerfile  codex.Dockerfile  gemini.Dockerfile
crates/coding-cli-isolator/src/: docker.rs  error.rs  handle.rs  lib.rs  local.rs  pty_bridge.rs  traits.rs
crates/coding-cli-vendor-claude/: Cargo.toml  README.md
crates/coding-cli-vendor-claude/src/: command.rs  lib.rs  mapper.rs  parser.rs
crates/coding-cli-vendor-codex/: Cargo.toml  README.md
crates/coding-cli-vendor-codex/src/: command.rs  lib.rs  mapper.rs  parser.rs
crates/coding-cli-vendor-gemini/: Cargo.toml  README.md
crates/coding-cli-vendor-gemini/src/: command.rs  lib.rs  mapper.rs  parser.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  context.rs  error.rs  event.rs  ids.rs  lib.rs  memory.rs  value.rs
crates/deep-research-core/: Cargo.toml  README.md
crates/deep-research-core/src/: artifacts.rs  citation.rs  coverage.rs  lib.rs  plan.rs  request.rs  result.rs  scope.rs  telemetry.rs  transcript.rs
crates/deep-research-harness/: Cargo.toml  README.md
crates/deep-research-harness-web/: Cargo.toml  README.md
crates/deep-research-harness-web/src/: lib.rs  runner.rs  spa.rs  sse.rs
crates/deep-research-harness-web/src/routes/: mod.rs  research.rs
crates/deep-research-harness-web/tests/: routes.rs
crates/deep-research-harness-web/ui/: app.js  index.html  styles.css
crates/deep-research-harness/src/: boxed.rs  dispatch.rs  error.rs  events.rs  handle.rs  harness.rs  lib.rs  loop_strategy.rs  spec.rs  state.rs  store.rs  termination.rs
crates/deep-research-harness/src/agent/: clarifier.rs  critic.rs  factory.rs  mod.rs  parse.rs  planner.rs  prompts.rs  researcher.rs  strategies.rs  verifier.rs  writer.rs
crates/deep-research-harness/src/roles/: clarifier.rs  critic.rs  mod.rs  planner.rs  researcher.rs  verifier.rs  writer.rs
crates/deep-research-harness/src/strategies/: clarify_plan_search_verify.rs  iterative_deepening.rs  linear_write_critique.rs  mod.rs  multi_agent_parallel.rs  outline_first_section_fanout.rs  plan_and_execute.rs
crates/deep-research-harness/src/tools/: append_citation.rs  append_draft_section.rs  append_sub_question.rs  mod.rs  record_clarification.rs  record_critique.rs  record_search_hit.rs  set_final_report.rs  set_plan.rs  set_sub_question_status.rs  tests_support.rs
crates/deep-research-harness/tests/: agent_roles.rs  integration_test.rs  new_strategies.rs  tools.rs
crates/deep-research-shell/: Cargo.toml  README.md
crates/deep-research-shell/src/: classifier.rs  error.rs  lib.rs  shallow.rs  shell.rs
crates/deep-research-shell/tests/: integration_test.rs
docs/: agent-pipeline.md  agentic-framework-architecture.md  architecture.md  avatar-harness.md  coding-cli-harness.md  deep-research-harness-plan.md  deep-research-harness.md  eval.md  feature-matrix.md  index.md  meetings-harness.md  (+11 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+664 files in other folders)
