[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/callable",
    "crates/strategy",
    "crates/context",
    "crates/observability",
    "crates/state",
    "crates/tool",
    "crates/skill",
    "crates/memory",
    "crates/embed",
    "crates/stt-core",
    "crates/stt-remote-core",
    "crates/stt-runtime-openai",
    "crates/stt-audio",
    "crates/stt-runtime-whisper",
    "crates/stt-runtime-deepgram",
    "crates/stt-runtime-assemblyai",
    "crates/stt-diarize-sherpa",
    "crates/stt-voice",
    "crates/stt-tool",
    "crates/retriever",
    "crates/ingest",
    "crates/persona",
    "crates/instruction",
    "crates/parser",
    "crates/cache",
    "crates/agent",
    "crates/workflow",
    "crates/harness",
    "crates/org",
    "crates/registry",
    "crates/eval",
    "crates/py-bindings",
    "crates/cli",
    "crates/testkit",
    "crates/umbrella",
    "xtask",
]

[workspace.package]
version       = "0.5.0"
edition       = "2021"
rust-version  = "1.78"
license       = "Apache-2.0"
repository    = "https://github.com/rustakka/atomr-agents"
homepage      = "https://github.com/rustakka/atomr-agents"
documentation = "https://docs.rs/atomr-agents"
authors       = ["atomr-agents contributors"]
readme        = "README.md"

[workspace.dependencies]
# Async / runtime
tokio        = { version = "1.39", features = ["full"] }
async-trait  = "0.1"
futures      = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency primitives
parking_lot = "0.12"
arc-swap    = "1.7"
dashmap     = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"

# Error handling
thiserror = "1"
anyhow    = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time / utility
url       = { version = "2", features = ["serde"] }
once_cell = "1"
uuid      = { version = "1", features = ["v4", "serde"] }
chrono    = { version = "0.4", default-features = false, features = ["clock", "serde"] }
semver    = { version = "1", features = ["serde"] }

# Testing
proptest = "1"

# HTTP / WebSockets / audio (used by stt-* crates)
reqwest           = { version = "0.12", default-features = false, features = ["json", "stream", "multipart"] }
tokio-tungstenite = { version = "0.23", default-features = false }
secrecy           = "0.10"
dirs              = "5"

# Python bindings (optional)
pyo3                 = { version = "0.22", default-features = false, features = ["macros"] }
pyo3-async-runtimes  = { version = "0.22", default-features = false, features = ["tokio-runtime"] }

# Sibling atomr workspace ---------------------------------------------------
# Wired against local 0.6.0 path deps. Publishing atomr-agents requires
# atomr 0.6.0 to be on crates.io first (it is — atomr-infer 0.6.5
# already tracks the same upstream upgrade).
atomr                  = { path = "../atomr/crates/atomr",                  version = "0.6.0" }
atomr-core             = { path = "../atomr/crates/atomr-core",             version = "0.6.0" }
atomr-config           = { path = "../atomr/crates/atomr-config",           version = "0.6.0" }
atomr-macros           = { path = "../atomr/crates/atomr-macros",           version = "0.6.0" }
atomr-testkit          = { path = "../atomr/crates/atomr-testkit",          version = "0.6.0" }
atomr-cluster          = { path = "../atomr/crates/atomr-cluster",          version = "0.6.0" }
atomr-cluster-tools    = { path = "../atomr/crates/atomr-cluster-tools",    version = "0.6.0" }
atomr-cluster-sharding = { path = "../atomr/crates/atomr-cluster-sharding", version = "0.6.0" }
atomr-distributed-data = { path = "../atomr/crates/atomr-distributed-data", version = "0.6.0" }
atomr-streams          = { path = "../atomr/crates/atomr-streams",          version = "0.6.0" }
atomr-persistence      = { path = "../atomr/crates/atomr-persistence",      version = "0.6.0" }
atomr-persistence-query = { path = "../atomr/crates/atomr-persistence-query", version = "0.6.0" }
atomr-telemetry        = { path = "../atomr/crates/atomr-telemetry",        version = "0.6.0" }
atomr-coordination     = { path = "../atomr/crates/atomr-coordination",     version = "0.6.0" }
atomr-discovery        = { path = "../atomr/crates/atomr-discovery",        version = "0.6.0" }

# Sibling atomr-infer workspace --------------------------------------------
# Wired against local 0.7.0 path deps. Publishing atomr-agents requires
# atomr-infer 0.7.0 to be on crates.io first.
atomr-infer-core               = { path = "../atomr-infer/crates/inference-core",               version = "0.7.0" }
atomr-infer-runtime            = { path = "../atomr-infer/crates/inference-runtime",            version = "0.7.0" }
atomr-infer-testkit            = { path = "../atomr-infer/crates/inference-testkit",            version = "0.7.0" }
atomr-infer-runtime-anthropic  = { path = "../atomr-infer/crates/inference-runtime-anthropic",  version = "0.7.0" }
atomr-infer-runtime-openai     = { path = "../atomr-infer/crates/inference-runtime-openai",     version = "0.7.0" }
atomr-infer-runtime-gemini     = { path = "../atomr-infer/crates/inference-runtime-gemini",     version = "0.7.0" }

# Sibling atomr-accel workspace --------------------------------------------
# Wired against local 0.4.0 path deps. Publishing atomr-agents requires
# atomr-accel 0.4.0 to be on crates.io first.
atomr-accel        = { path = "../atomr-accel/crates/atomr-accel",        version = "0.4.0" }
atomr-accel-agents = { path = "../atomr-accel/crates/atomr-accel-agents", version = "0.4.0" }

# Internal crates -----------------------------------------------------------
atomr-agents-core          = { path = "crates/core", version = "0.5.0" }
atomr-agents-callable      = { path = "crates/callable", version = "0.5.0" }
atomr-agents-strategy      = { path = "crates/strategy", version = "0.5.0" }
atomr-agents-context       = { path = "crates/context", version = "0.5.0" }
atomr-agents-observability = { path = "crates/observability", version = "0.5.0" }
atomr-agents-state         = { path = "crates/state", version = "0.5.0" }
atomr-agents-retriever     = { path = "crates/retriever", version = "0.5.0" }
atomr-agents-ingest        = { path = "crates/ingest", version = "0.5.0" }
atomr-agents-parser        = { path = "crates/parser", version = "0.5.0" }
atomr-agents-cache         = { path = "crates/cache", version = "0.5.0" }
atomr-agents-tool          = { path = "crates/tool", version = "0.5.0" }
atomr-agents-skill         = { path = "crates/skill", version = "0.5.0" }
atomr-agents-memory        = { path = "crates/memory", version = "0.5.0" }
atomr-agents-embed         = { path = "crates/embed", version = "0.5.0" }
atomr-agents-stt-core         = { path = "crates/stt-core", version = "0.5.0" }
atomr-agents-stt-remote-core  = { path = "crates/stt-remote-core", version = "0.5.0" }
atomr-agents-stt-runtime-openai     = { path = "crates/stt-runtime-openai", version = "0.5.0" }
atomr-agents-stt-audio        = { path = "crates/stt-audio", version = "0.5.0" }
atomr-agents-stt-runtime-whisper = { path = "crates/stt-runtime-whisper", version = "0.5.0" }
atomr-agents-stt-runtime-deepgram = { path = "crates/stt-runtime-deepgram", version = "0.5.0" }
atomr-agents-stt-runtime-assemblyai = { path = "crates/stt-runtime-assemblyai", version = "0.5.0" }
atomr-agents-stt-diarize-sherpa = { path = "crates/stt-diarize-sherpa", version = "0.5.0" }
atomr-agents-stt-voice        = { path = "crates/stt-voice", version = "0.5.0" }
atomr-agents-stt-tool         = { path = "crates/stt-tool", version = "0.5.0" }
atomr-agents-persona       = { path = "crates/persona", version = "0.5.0" }
atomr-agents-instruction   = { path = "crates/instruction", version = "0.5.0" }
atomr-agents-agent         = { path = "crates/agent", version = "0.5.0" }
atomr-agents-workflow      = { path = "crates/workflow", version = "0.5.0" }
atomr-agents-harness       = { path = "crates/harness", version = "0.5.0" }
atomr-agents-org           = { path = "crates/org", version = "0.5.0" }
atomr-agents-registry      = { path = "crates/registry", version = "0.5.0" }
atomr-agents-eval          = { path = "crates/eval", version = "0.5.0" }
atomr-agents-testkit       = { path = "crates/testkit", version = "0.5.0" }
atomr-agents               = { path = "crates/umbrella", version = "0.5.0" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
