[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/callable",
    "crates/strategy",
    "crates/context",
    "crates/observability",
    "crates/state",
    "crates/tool",
    "crates/skill",
    "crates/memory",
    "crates/embed",
    "crates/stt-core",
    "crates/stt-remote-core",
    "crates/stt-runtime-openai",
    "crates/stt-audio",
    "crates/stt-runtime-whisper",
    "crates/stt-runtime-deepgram",
    "crates/stt-runtime-assemblyai",
    "crates/stt-diarize-sherpa",
    "crates/stt-voice",
    "crates/stt-tool",
    "crates/stt-harness",
    "crates/stt-harness-web",
    "crates/meetings-harness",
    "crates/meetings-harness-web",
    "crates/tts-core",
    "crates/tts-audio",
    "crates/tts-runtime-openai",
    "crates/tts-runtime-elevenlabs",
    "crates/tts-runtime-piper",
    "crates/tts-runtime-kokoro",
    "crates/tts-runtime-moss",
    "crates/tts-runtime-xtts",
    "crates/tts-runtime-openai-realtime",
    "crates/tts-runtime-gemini-live",
    "crates/tts-voice",
    "crates/tts-tool",
    "crates/retriever",
    "crates/ingest",
    "crates/persona",
    "crates/instruction",
    "crates/parser",
    "crates/cache",
    "crates/agent",
    "crates/workflow",
    "crates/harness",
    "crates/org",
    "crates/registry",
    "crates/eval",
    "crates/py-bindings",
    "crates/cli",
    "crates/testkit",
    "crates/umbrella",
    "xtask",
]

[workspace.package]
version       = "0.11.0"
edition       = "2021"
rust-version  = "1.78"
license       = "Apache-2.0"
repository    = "https://github.com/rustakka/atomr-agents"
homepage      = "https://github.com/rustakka/atomr-agents"
documentation = "https://docs.rs/atomr-agents"
authors       = ["atomr-agents contributors"]
readme        = "README.md"

[workspace.dependencies]
# Async / runtime
tokio        = { version = "1.39", features = ["full"] }
async-trait  = "0.1"
futures      = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency primitives
parking_lot = "0.12"
arc-swap    = "1.7"
dashmap     = "6"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bytes      = "1"

# Error handling
thiserror = "1"
anyhow    = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Time / utility
url       = { version = "2", features = ["serde"] }
once_cell = "1"
uuid      = { version = "1", features = ["v4", "serde"] }
chrono    = { version = "0.4", default-features = false, features = ["clock", "serde"] }
semver    = { version = "1", features = ["serde"] }

# Testing
proptest = "1"

# HTTP / WebSockets / audio (used by stt-* crates)
reqwest           = { version = "0.12", default-features = false, features = ["json", "stream", "multipart"] }
tokio-tungstenite = { version = "0.23", default-features = false }
secrecy           = "0.10"
dirs              = "5"

# Web server (used by stt-harness-web)
axum       = { version = "0.7", features = ["ws"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = { version = "8", features = ["mime-guess"] }

# Python bindings (optional)
pyo3                 = { version = "0.22", default-features = false, features = ["macros"] }
pyo3-async-runtimes  = { version = "0.22", default-features = false, features = ["tokio-runtime"] }

# Sibling atomr workspace ---------------------------------------------------
# Cross-repo deps consume crates.io artifacts only — no `path = "..."`
# links to the sibling checkout. Bump these in lockstep with sibling
# releases (and never ship an atomr-agents that requires an unpublished
# sibling version).
atomr                   = "0.9.2"
atomr-core              = "0.9.2"
atomr-config            = "0.9.2"
atomr-macros            = "0.9.2"
atomr-testkit           = "0.9.2"
atomr-cluster           = "0.9.2"
atomr-cluster-tools     = "0.9.2"
atomr-cluster-sharding  = "0.9.2"
atomr-distributed-data  = "0.9.2"
atomr-streams           = "0.9.2"
atomr-persistence       = "0.9.2"
atomr-persistence-query = "0.9.2"
atomr-telemetry         = "0.9.2"
atomr-coordination      = "0.9.2"
atomr-discovery         = "0.9.2"

# Sibling atomr-infer workspace --------------------------------------------
atomr-infer-core              = "0.8.0"
atomr-infer-runtime           = "0.8.0"
atomr-infer-testkit           = "0.8.0"
atomr-infer-runtime-anthropic = "0.8.0"
atomr-infer-runtime-openai    = "0.8.0"
atomr-infer-runtime-gemini    = "0.8.0"

# Sibling atomr-accel workspace --------------------------------------------
atomr-accel        = "0.10.0"
atomr-accel-agents = "0.10.0"

# Internal crates -----------------------------------------------------------
atomr-agents-core          = { path = "crates/core", version = "0.11.0" }
atomr-agents-callable      = { path = "crates/callable", version = "0.11.0" }
atomr-agents-strategy      = { path = "crates/strategy", version = "0.11.0" }
atomr-agents-context       = { path = "crates/context", version = "0.11.0" }
atomr-agents-observability = { path = "crates/observability", version = "0.11.0" }
atomr-agents-state         = { path = "crates/state", version = "0.11.0" }
atomr-agents-retriever     = { path = "crates/retriever", version = "0.11.0" }
atomr-agents-ingest        = { path = "crates/ingest", version = "0.11.0" }
atomr-agents-parser        = { path = "crates/parser", version = "0.11.0" }
atomr-agents-cache         = { path = "crates/cache", version = "0.11.0" }
atomr-agents-tool          = { path = "crates/tool", version = "0.11.0" }
atomr-agents-skill         = { path = "crates/skill", version = "0.11.0" }
atomr-agents-memory        = { path = "crates/memory", version = "0.11.0" }
atomr-agents-embed         = { path = "crates/embed", version = "0.11.0" }
atomr-agents-stt-core         = { path = "crates/stt-core", version = "0.11.0" }
atomr-agents-stt-remote-core  = { path = "crates/stt-remote-core", version = "0.11.0" }
atomr-agents-stt-runtime-openai     = { path = "crates/stt-runtime-openai", version = "0.11.0" }
atomr-agents-stt-audio        = { path = "crates/stt-audio", version = "0.11.0" }
atomr-agents-stt-runtime-whisper = { path = "crates/stt-runtime-whisper", version = "0.11.0" }
atomr-agents-stt-runtime-deepgram = { path = "crates/stt-runtime-deepgram", version = "0.11.0" }
atomr-agents-stt-runtime-assemblyai = { path = "crates/stt-runtime-assemblyai", version = "0.11.0" }
atomr-agents-stt-diarize-sherpa = { path = "crates/stt-diarize-sherpa", version = "0.11.0" }
atomr-agents-stt-voice        = { path = "crates/stt-voice", version = "0.11.0" }
atomr-agents-stt-tool         = { path = "crates/stt-tool", version = "0.11.0" }
atomr-agents-stt-harness      = { path = "crates/stt-harness", version = "0.11.0" }
atomr-agents-stt-harness-web  = { path = "crates/stt-harness-web", version = "0.11.0" }
atomr-agents-meetings-harness     = { path = "crates/meetings-harness", version = "0.11.0" }
atomr-agents-meetings-harness-web = { path = "crates/meetings-harness-web", version = "0.11.0" }
atomr-agents-tts-core         = { path = "crates/tts-core", version = "0.11.0" }
atomr-agents-tts-audio        = { path = "crates/tts-audio", version = "0.11.0" }
atomr-agents-tts-runtime-openai = { path = "crates/tts-runtime-openai", version = "0.11.0" }
atomr-agents-tts-runtime-elevenlabs = { path = "crates/tts-runtime-elevenlabs", version = "0.11.0" }
atomr-agents-tts-runtime-piper      = { path = "crates/tts-runtime-piper", version = "0.11.0" }
atomr-agents-tts-runtime-kokoro     = { path = "crates/tts-runtime-kokoro", version = "0.11.0" }
atomr-agents-tts-runtime-moss       = { path = "crates/tts-runtime-moss", version = "0.11.0" }
atomr-agents-tts-runtime-xtts       = { path = "crates/tts-runtime-xtts", version = "0.11.0" }
atomr-agents-tts-runtime-openai-realtime = { path = "crates/tts-runtime-openai-realtime", version = "0.11.0" }
atomr-agents-tts-runtime-gemini-live     = { path = "crates/tts-runtime-gemini-live", version = "0.11.0" }
atomr-agents-tts-voice              = { path = "crates/tts-voice", version = "0.11.0" }
atomr-agents-tts-tool               = { path = "crates/tts-tool", version = "0.11.0" }
atomr-agents-persona       = { path = "crates/persona", version = "0.11.0" }
atomr-agents-instruction   = { path = "crates/instruction", version = "0.11.0" }
atomr-agents-agent         = { path = "crates/agent", version = "0.11.0" }
atomr-agents-workflow      = { path = "crates/workflow", version = "0.11.0" }
atomr-agents-harness       = { path = "crates/harness", version = "0.11.0" }
atomr-agents-org           = { path = "crates/org", version = "0.11.0" }
atomr-agents-registry      = { path = "crates/registry", version = "0.11.0" }
atomr-agents-eval          = { path = "crates/eval", version = "0.11.0" }
atomr-agents-testkit       = { path = "crates/testkit", version = "0.11.0" }
atomr-agents               = { path = "crates/umbrella", version = "0.11.0" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
