[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "atomr-agents"
version = "0.1.0"
description = "Composable agentic framework on top of atomr actors and atomr-infer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.maturin]
manifest-path = "crates/py-bindings/Cargo.toml"
module-name = "atomr_agents._native"
python-source = "python"
features = []
