[package]
name          = "xtask"
version       = "0.13.3"
edition       = { workspace = true }
publish       = false
description   = "Workspace tooling: harness-eval, bump, audit, replay."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap     = { workspace = true }
anyhow   = { workspace = true }
