[package]
name          = "atomr-agents-agent"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
authors       = { workspace = true }
description   = "Agent actor + per-turn pipeline + tool-call orchestration loop."

keywords      = ["agents", "atomr", "agent", "tool-calling", "ai"]
categories    = ["asynchronous", "api-bindings"]
readme        = "../../README.md"

[dependencies]
atomr-agents-core          = { workspace = true }
atomr-agents-strategy      = { workspace = true }
atomr-agents-context       = { workspace = true }
atomr-agents-tool          = { workspace = true }
atomr-agents-skill         = { workspace = true }
atomr-agents-memory        = { workspace = true }
atomr-agents-persona       = { workspace = true }
atomr-agents-instruction   = { workspace = true }
atomr-agents-callable      = { workspace = true }
atomr-agents-observability = { workspace = true }
atomr-core                 = { workspace = true }
atomr-macros               = { workspace = true }
atomr-infer-core           = { workspace = true }
atomr-infer-runtime        = { workspace = true }
async-trait                = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { workspace = true }
tracing                    = { workspace = true }
futures                    = { workspace = true }
chrono                     = { workspace = true }
parking_lot                = { workspace = true }

# Optional provider backends. Enable the corresponding feature to make
# the runner type available via `crate::providers::{anthropic, openai,
# gemini}`. Each backend pulls its own HTTP/SSE plumbing transitively.
atomr-infer-runtime-anthropic = { workspace = true, optional = true }
atomr-infer-runtime-openai    = { workspace = true, optional = true }
atomr-infer-runtime-gemini    = { workspace = true, optional = true }

[features]
default          = []
provider-anthropic = ["dep:atomr-infer-runtime-anthropic"]
provider-openai    = ["dep:atomr-infer-runtime-openai"]
provider-gemini    = ["dep:atomr-infer-runtime-gemini"]

[dev-dependencies]
atomr-infer-testkit         = { workspace = true }

